---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/namespace_simple_test/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
mymodule = types.SimpleNamespace()
mymodule.__name__ = 'mymodule'
mymodule_utils = types.SimpleNamespace()
mymodule_utils.__name__ = 'mymodule.utils'
mymodule.utils = mymodule_utils
CONSTANT = 42
def greet(name: str) -> str:
    """Greet someone"""
    return f"Hello, {name}!"
"""Simple utilities module"""
mymodule_utils.CONSTANT = CONSTANT
mymodule_utils.greet = greet
"""Test namespace imports with simple module"""
utils = mymodule_utils
print(utils.greet("World"))
print(f"Constant: {utils.CONSTANT}")
